@@ -2377,8 +2377,21 @@ static void _slurm_rpc_job_step_create(slurm_msg_t * msg)
 	}
 #endif
 
+#if defined HAVE_NATIVE_CRAY
+	if (LOTS_OF_AGENTS || (slurmctld_config.server_thread_count >= 128)) {
+		/*
+		 * Don't start more steps if system is very busy right now.
+		 * Getting cray network switch cookie is slow and happens
+		 * with job write lock set.
+		 */
+		slurm_send_rc_msg(msg, EAGAIN);
+		return;
+	}
+#endif
+
 	_throttle_start(&active_rpc_cnt);
 	lock_slurmctld(job_write_lock);
+
 	error_code = step_create(req_step_msg, &step_rec, false,
 				 msg->protocol_version);
 
